--- a/HttpServer/app/build.gradle
+++ b/HttpServer/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
 
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
-
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
 }
