--- a/HttpServer/app/build.gradle
+++ b/HttpServer/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:2.2.5"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
